src/objects/ServiceItemFamily__c.object
<CustomObject>
    <description>Specific &quot;charge type&quot; for a particular service (eg. Measured Water Volume, Measured Water Fixed Charge, Measured Sewerage Volume)</description>
    <fields>
        <fullName>AlgorithmType__c</fullName>
        <description>Used for bill calc engine to determine which algorithm to run. For now just have &quot;Measured Billing&quot; as picklist value</description>
        <label>Algorithm Type</label>
        <picklist>
            <picklistValues>
                <fullName>Measured Billing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EligibleForAgreedRate__c</fullName>
        <label>Eligible For Agreed Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date when the Client stops providing this charge under a particular service.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Controls the order of the Service Item  show on the bill.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostingPriority__c</fullName>
        <description>Used to define the order of which Bill Item will be paid during payment allocation.</description>
        <label>Posting Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurrenceFrequency__c</fullName>
        <description>How often the recurring bills items should be generated.</description>
        <label>Recurrence Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <description>One off or not:
Yes: If the user will retrieve a bill for this Service Item at repeating intervals. 
No: If this is billed one time</description>
        <label>Recurring</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceItemFamilyDescription__c</fullName>
        <description>Used to provide the details about the Service item Family for Agent&apos;s information.</description>
        <label>Service Item Family Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <description>Parent record of the Service Item Family</description>
        <label>Service Type</label>
        <referenceTo>ServiceType__c</referenceTo>
        <relationshipLabel>Service Item Family</relationshipLabel>
        <relationshipName>ServiceItemFamily</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date when the Client starts providing  this charge under a particular service.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>Indicate if the Service Item Family is taxable.</description>
        <label>Tax</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Item Family</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Item Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Item Family</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MandatoryBandInterval</fullName>
        <active>false</active>
        <description>Band Interval is mandatory if Banded is selected as yes</description>
        <errorConditionFormula>AND( ISPICKVAL( Banded__c ,&apos;Yes&apos;),ISPICKVAL( BandInterval__c,&apos;&apos;) )</errorConditionFormula>
        <errorMessage>Band Interval is mandatory if Banded is selected as YES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryRecurringFrequency</fullName>
        <active>true</active>
        <description>Recurring Frequency is mandatory if Recurring is selected as yes</description>
        <errorConditionFormula>AND( TEXT(  Recurring__c ) =&apos;Yes&apos;, 
ISBLANK(TEXT(  RecurrenceFrequency__c )) )</errorConditionFormula>
        <errorDisplayField>RecurrenceFrequency__c</errorDisplayField>
        <errorMessage>Recurring Frequency is mandatory if the Recurring is YES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateMustbeBeforeEndDate</fullName>
        <active>true</active>
        <description>Start Date must be before End Date or End Date cannot be before Start Date.</description>
        <errorConditionFormula>StartDate__c &gt;= EndDate__c</errorConditionFormula>
        <errorMessage>Start Date must be before End Date</errorMessage>
    </validationRules>
</CustomObject>